networkpolicy/networkpolicy__basic_kafka_setup__ingress-apisix__internet__any__ingress__ports__2379-2380-8080-9000-9080-9180-9443__nr67__lines27.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: 
    ingress-apisix--internet--any--ingress--ports--2379-2380-8080-9000-9080-9180-9443--nr67
  namespace: ingress-apisix
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
  - ports:
    - protocol: TCP
      port: 9180
    - protocol: TCP
      port: 9000
    - protocol: TCP
      port: 9080
    - protocol: TCP
      port: 2380
    - protocol: TCP
      port: 9443
    - protocol: TCP
      port: 2379
    - protocol: TCP
      port: 8080
